# CROSS_CHAIN_NFT

./: README.md
cross_nft_launcher/: Cargo.toml  README.md  canister_ids.json  dfx.json  monitor_solana_events.sh  package-lock.json  package.json
cross_nft_launcher/contracts/: nft.sol
cross_nft_launcher/scripts/: deploy_nft.sh  test_approvals.sh
cross_nft_launcher/src/cross_nft_launcher_backend/: Cargo.toml  cross_nft_launcher_backend.did
cross_nft_launcher/src/cross_nft_launcher_backend/src/: evm_nft_indexer.rs  evm_rpc_bindings.rs  lib.rs  release_nft.rs
cross_nft_launcher/src/cross_nft_launcher_frontend/: ICP_INTEGRATION.md  README.md  package-lock.json  package.json  setup.sh
cross_nft_launcher/src/cross_nft_launcher_frontend/public/: index.html
cross_nft_launcher/src/cross_nft_launcher_frontend/src/: App.js  index.css
cross_nft_launcher/src/cross_nft_launcher_frontend/src/components/: Header.js  MintSection.js  NFTGallery.js  TransferSection.js
cross_nft_launcher/src/cross_nft_launcher_frontend/src/config/: contract.js
cross_nft_launcher/src/cross_nft_launcher_frontend/src/context/: MetaMaskContext.js
cross_nft_launcher/src/cross_nft_launcher_frontend/src/services/: icpService.js
